src/main/resources/static/css/user-dashboard-style.css
.dashboard-nav {
	/*max-width: 200px;
	height: 100%;*/
}

.user-dashboard-nav {
	background-color: rgb(33, 37, 41);
	height: 35px;
}

.search-bar {
	/*position: absolute;*/
	/*left: 25%;
	transform: translate(-50%, -50%);
	display: inline !important;*/
}

.top-search-text-input {
	font-size: 10pt;
	padding: .05575rem .75rem;
	background-color: rgb(18, 18, 27);
	border: none;
	color: rgb(255, 255, 255);
	font-weight: 600;
	border-radius: .175rem;
	margin-right: 0;
	width: 100%;
}

.top-search-text-input:active {
	/*border:1px solid rgb(36, 31, 49);*/
	border: none;
	/*background-color: aqua;*/
}

.top-search-text-input:focus {
	/*border:1px solid rgb(36, 31, 49);*/
	border: 1px solid rgb(94, 92, 100);
	border-right: none;
	background-color: rgb(36, 31, 49);
	/*outline: solid 1px rgb(245, 194, 17);*/
	outline: none;
}


.top-search-btn {
	background-color: rgb(61, 56, 70);
	color: rgb(255, 255, 255);
	background-color: rgb(18, 18, 27);
	padding: .2rem .65rem;
	padding-top: 0.4rem;
	margin-left: -0.3rem;
	font-size: 10pt;
	font-weight: 600;
}

.top-collapsable-menu-container {
	border-top: 0;
	z-index: 1000;
	background-color: rgb(47, 50, 54);
	background-color: rgb(33, 37, 41);

	/*display: none;*/
	height: 0px;
	transition: 0.3s ease-in-out;
	position: fixed;
	right: 0;
	margin-right: 0.5rem;
	overflow: hidden;
	/*padding: 4px !important;*/
	border-radius: 0.3rem;

	padding: 0px;
	height: 0px;
	display: none;
	border: 0;
}

.top-collapsable-menu-container-expanded {
	padding: 30px !important;
	height: 300px !important;
	display: block !important;
	border: 1px solid rgb(61, 56, 70);
	border-top: none;
}

#top-collapsable-menu-container {}

.overflow-stop{
	scroll-snap-stop: always;
}

.top-collapsable-menu-outer-container {
	display: none;
	}
	
.top-collapsable-menu-outer-container-expanded {
	border: 2px solid red;
	width: 100%;
	height: 100%;
	z-index: 2200;
	position: absolute;
	display: block;

}

.top-menu-content {
	display: none;
}

.navbar-links-container {
	/*display: flex;*/
	color: rgba(255, 255, 255, 0.55);
	/*border: 1px solid red;*/

	width: 100%;
}

.navbar-nav {
	display: inline !important;
	padding-top: 0 !important;
}

.nav-link {
	padding-left: .5rem !important;
	/*border: 3px solid yellowgreen;*/
}

.dashboard-link:hover,
.todo-list-link:hover,
.scrum-board-link:hover,
.account-link:hover {
	background-color: rgba(0, 0, 0, 0.4);
}

.dashboard-link-selected {
	color: rgb(118, 187, 118);
	background-color: rgba(0, 0, 0, 0.5);
}

.side-nav-link-selected {
	color: rgb(118, 187, 118);
	background-color: rgba(0, 0, 0, 0.5);
	border-left: 3px solid rgb(191, 152, 56) !important;
	transition: 0.1s ease-in-out;
}

.top-nav-links {
	display: inline !important;
}

.navbar-brand-dashboard {
	color: rgb(191, 152, 56) !important;
}

#side-menu {
	width: 100px;
	/*position: fixed !important;
	display: block;*/
	padding-right: 5px;
	min-width: 10px;
	height: 100% !important;
	z-index: 100;
	font-size: 13pt;
}

#side-menu-toggle {
	font-size: 14pt;
	transition: all 0.3s ease-in-out;
	border: 1px solid grey;
	border-radius: 0.3rem;
	padding: 0.2rem;
	margin-left: 0.4rem;
	color: rgba(255, 255, 255, 0.55);
	letter-spacing: -0.1em;
	transition: 0.3s ease-in-out;
}

#side-menu-toggle:hover {
	color: rgb(118, 187, 118);
	letter-spacing: 0em !important;
	background-color: rgba(0, 0, 0, 0.5);
}

#side-menu-toggle:active {
	/*text-shadow: 0 0 10px rgb(118, 187, 118);*/
	background-color: rgb(61, 56, 70);
}

#side-nav-arrow {
	font-size: 9pt !important;
	/*padding-right: -0.1e*/
}

#side-nav-arrow:hover {
	/*padding-right: 0em !important;*/
}

.fa-caret-right {
	/*display: none !important;*/
}

.fa-caret-left {}

#side-nav-left-arrow {
	display: none;
}

.side-nav {
	height: 100% !important;
	position: fixed;
	padding-right: 1px !important;
	transition: all 0.3s ease-in-out;
	width: 45px;
	white-space: nowrap;
	overflow: hidden;
}

.side-nav-text {
	transition: 0.1s ease-in-out;
	/*display: none;*/
	display: none;
	animation: fade-in 0.8s ease-in-out;
	/*color: rgb(182 182 182 / 55%);*/
}

@keyframes fade-in {
	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}
}

.user-dashboard-cards {
	cursor: pointer;
	border-bottom: 3px solid goldenrod;
	margin: 1.5em 1.5em 1.5em 0;
	transition: all 0.3s ease-in-out;
	height: 300px;
	overflow: auto;
}

.user-dashboard-cards:hover {
	background: rgba(205, 171, 143, 0.2);
	border-bottom: 3px solid rgb(118, 187, 118);
	box-shadow: 0px 0px 3px 3px rgb(192, 191, 188);
	/*box-shadow: inset 40em 0em gold;*/
}

.dashboard-card-img-top {
	height: 25px !important;
	width: 20px;
	color: rgb(118, 187, 118);
}

.dashboard-card-title {
	color: rgb(118, 187, 118);
}

.card-header {
	/*border-bottom: 1px solid rgb(192, 191, 188);*/
	margin: 0 !important;
	/*color: rgb(118, 187, 118);*/
}

/*.fa-solid:not(.nav-icon, #side-menu-toggle, #side-nav-arrow, fa-regular) {
	color: rgb(118, 187, 118);
}*/

/*.project-count,
.item-count,
.todo-card-item-count {
	visibility: hidden;
	display: none;
}*/
.item-count-check {
	display: none;
}

.top-dangling-x-btn {
	margin-bottom: -20px;
	margin-right: -12px;
	font-size: 12pt;
	background-color: rgb(94, 92, 100);
	padding: 0.5em 0.5em 0.5em 0.5em;
	border-radius: 50%;
	z-index: 1000;
	position: relative;
	/*position: absolute;*/
	/*font-weight:bold;*/
	/*font-stretch: expanded;*/
}

.top-dangling-x-btn:hover {
	background-color: rgb(61, 56, 70);
	color: goldenrod;
}

.viewing-modal-header {
	color: rgb(186, 169, 138);
	font-size: 100%;
}

.modal-backdrop-blur {
	background: rgba(36, 31, 49, 0.2);
	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(2px);
	-webkit-backdrop-filter: blur(2px);
	width: 100%;
	margin-left: 3% !important;
	position: fixed;
	z-index: 13;
	border-top-right-radius: 0.375rem;
	border-top-left-radius: 0.375rem;
	transition: all 0.2s linear;
	opacity: 0;
	visibility: hidden;
	height: 100%;
	top: 0;
}
/* ... */

